<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ATM</string>

    <!-- 首页 -->
    <string name="fragment_account">我的帐号</string>
    <string name="fragment_home">首页</string>
    <string name="fragment_more">更多</string>
    <string name="fragment_adv">广告列表</string>
    <string name="adv_detail">广告详情</string>
    <string name="adv_collection">收取</string>
    <string name="username">账号：</string>
    <string name="forgetPwd">忘记密码？</string>
    <string name="resive_password">确认修改</string>
    <string name="password">密码：</string>
    <string name="login">登&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;录</string>
    <string name="regist">快速注册</string>
    <string name="registResult">注册结果</string>

    <!-- 密码类 -->
    <string name="loginPwd">登录密码修改</string>
    <string name="checkPwd">二级密码修改</string>
    <string name="payPwd">支付密码修改</string>
    <string name="changePwd">修改密码</string>
    <string name="oldPwd">旧密码</string>
    <string name="newPwd">新密码</string>
    <string name="sureNewPwd">确认新秘密</string>

    <!-- 会员类 -->
    <string name="vip_account">会员帐号:</string>
    <string name="vip_name">会员姓名:</string>
    <string name="vip_level">会员级别:</string>

    <!-- 转帐类 -->
    <string name="transfer_vip">会员转帐</string>
    <string name="transfer_detail">转帐明细</string>
    <string name="transfer_sure">确认转帐</string>
    <string name="cancel">取消</string>
    <string name="transferor_number">转出者编号：</string>
    <string name="recipient_number">接收者编号：</string>
    <string name="transfer_label_amount">金&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;额：</string>

    <!-- 兑换类 -->
    <string name="exchange_integral">积分兑换</string>
    <string name="exchange_detail">兑换明细</string>
    <string name="exchange_ok">确认兑换</string>
    <string name="award_dtail">奖励明细</string>
    <string name="money_remain">钱包余额</string>
    <string name="available_integral">$可用积分</string>
    <string name="rewards_style">类&#160;&#160;&#160;&#160;型：</string>

    <!-- 申请提现类 -->
    <string name="withdrawals">提&#160;&#160;&#160;&#160;现</string>
    <string name="withdrawals_apply">申请提现</string>
    <string name="withdrawals_detail">提现明细</string>
    <string name="withdrawals_explain">提现说明</string>
    <string name="withdrawals_label_amount">金&#160;&#160;&#160;&#160;额：</string>
     <string name="label_amount">金额：</string>
    <string name="withdrawals_label_bank">银&#160;&#160;&#160;&#160;行：</string>
    <string name="withdrawals_label_fee">手续费：</string>
    <string name="withdrawals_label_logout">退&#160;&#160;&#160;&#160;出</string>
    <string name="withdrawals_ok">确认</string>
    <string name="withdrawals_label_results">结果详情</string>
    <string name="withdrawals_canle">取&#160;&#160;&#160;&#160;&#160;&#160;消</string>
    <string name="withdrawals_sure">确认提现</string>
    
    <string name="account_name">账户名称:</string>
    <string name="open_account_bank">开户银行:</string>
    <string name="branch_name">支行名称:</string>
    <string name="bank_account">银行帐号:</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_explain_withdrawals">MainActivity</string>
    <string name="apply_ok">申请已成功提交</string>
</resources>
