<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:titlebar="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.pangff.wjw.view.TitleBar
        android:layout_width="match_parent"
        android:layout_height="@dimen/titleBarHeight"
        titlebar:canBack="false"
        titlebar:title="@string/fragment_more" />

    <ScrollView
        android:id="@+id/sView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/page_bg"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/loginPasswordChangeT"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/menu_top_bg"
                android:drawableRight="@drawable/more_arrow"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingRight="10dp"
                android:text="@string/loginPwd" />

            <TextView
                android:id="@+id/checkPasswordChangeT"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/menu_center_bg"
                android:drawableRight="@drawable/more_arrow"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingRight="10dp"
                android:text="@string/checkPwd" />

            <TextView
                android:id="@+id/payPasswordChangeT"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/menu_center_bg"
                android:drawableRight="@drawable/more_arrow"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingRight="10dp"
                android:text="@string/payPwd" />

            <TextView
                android:id="@+id/registT"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/menu_bottom_bg"
                android:drawableRight="@drawable/more_arrow"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingRight="10dp"
                android:text="@string/regist" />

            <Button
                android:id="@+id/withdrawals_logoutB"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/blue_btn_bg_selector"
                android:text="@string/withdrawals_label_logout" />
        </LinearLayout>
    </ScrollView>

    <com.pangff.wjw.vindicator.UnderlinePageIndicator
        android:id="@+id/indicator"
        android:layout_width="fill_parent"
        android:layout_height="35dp" />

</LinearLayout>