<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:titlebar="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.pangff.wjw.view.TitleBar
        android:layout_width="match_parent"
        android:layout_height="@dimen/titleBarHeight"
        titlebar:canBack="false"
        titlebar:title="@string/fragment_account" />

    <ScrollView
        android:id="@+id/sView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/page_bg"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/myAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/menu_all_selector"
                android:clickable="true"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <ImageView
                    android:id="@+id/hostIamgeI"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/header_default"
                    android:scaleType="centerInside" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:orientation="vertical"
                    android:layout_weight="1" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/vipIdT"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vip_account" />

                        <TextView
                            android:id="@+id/showIdT"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="15dp"
                            android:text="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/vipNameT"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vip_name" />

                        <TextView
                            android:id="@+id/showNameT"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="15dp"
                            android:text="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/vipLevelT"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vip_level" />

                        <TextView
                            android:id="@+id/showLevelT"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="15dp"
                            android:text="1" />
                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingRight="10dp"
                    android:src="@drawable/more_arrow" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/menu_top_bg" >

                    <TextView
                        android:id="@+id/remainT"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="13dp"
                        android:layout_weight="3"
                        android:drawableLeft="@drawable/icon_package_light"
                        android:gravity="center_vertical"
                        android:text="@string/money_remain" />

                    <TextView
                        android:id="@+id/showRemainT"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingRight="10dp"
                        android:text="0.00" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/menu_bottom_bg" >

                    <TextView
                        android:id="@+id/integralT"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="35dp"
                        android:layout_weight="3"
                        android:gravity="center_vertical"
                        android:text="@string/available_integral" />

                    <TextView
                        android:id="@+id/showIntegralT"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingRight="10dp"
                        android:text="171" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/withdrawalsApplyT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/menu_top_selector"
                    android:clickable="true"
                    android:drawableRight="@drawable/more_arrow"
                    android:gravity="center_vertical"
                    android:paddingLeft="38dp"
                    android:paddingRight="10dp"
                    android:text="@string/withdrawals_apply" />

                <TextView
                    android:id="@+id/withdrawalsDetailT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/menu_bottom_selector"
                    android:clickable="true"
                    android:drawableRight="@drawable/more_arrow"
                    android:gravity="center_vertical"
                    android:paddingLeft="38dp"
                    android:paddingRight="10dp"
                    android:text="@string/withdrawals_detail" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/vipTransferT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/menu_top_selector"
                    android:clickable="true"
                    android:drawableRight="@drawable/more_arrow"
                    android:gravity="center_vertical"
                    android:paddingLeft="38dp"
                    android:paddingRight="10dp"
                    android:text="@string/transfer_vip" />

                <TextView
                    android:id="@+id/transferDetailT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/menu_bottom_selector"
                    android:clickable="true"
                    android:drawableRight="@drawable/more_arrow"
                    android:gravity="center_vertical"
                    android:paddingLeft="38dp"
                    android:paddingRight="10dp"
                    android:text="@string/transfer_detail" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/exchangeT"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/menu_top_selector"
                    android:clickable="true"
                    android:drawableRight="@drawable/more_arrow"
                    android:gravity="center_vertical"
                    android:paddingLeft="38dp"
                    android:paddingRight="10dp"
                    android:text="@string/exchange_integral" />

                <TextView
                    android:id="@+id/exchangeDtailT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/menu_bottom_selector"
                    android:clickable="true"
                    android:drawableRight="@drawable/more_arrow"
                    android:gravity="center_vertical"
                    android:paddingLeft="38dp"
                    android:paddingRight="10dp"
                    android:text="@string/exchange_detail" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/awardDtailT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/menu_all_selector"
                    android:clickable="true"
                    android:drawableRight="@drawable/more_arrow"
                    android:gravity="center_vertical"
                    android:paddingLeft="38dp"
                    android:paddingRight="10dp"
                    android:text="@string/award_dtail" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.pangff.wjw.vindicator.UnderlinePageIndicator
        android:id="@+id/indicator"
        android:layout_width="fill_parent"
        android:layout_height="35dp" />

</LinearLayout>