<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:background="@drawable/list_item_selector"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/timeT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:gravity="left"
        android:padding="5dp"
        android:text="2014-07-01" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <TextView
            android:id="@+id/labelTransferorNumberT"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/transferor_number" />

        <TextView
            android:id="@+id/transferorNumberT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="11111" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <TextView
            android:id="@+id/labelRecipientNumberT"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/recipient_number" />

        <TextView
            android:id="@+id/recipientNumberT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="111111" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <TextView
            android:id="@+id/labelBankT"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/transfer_label_amount" />

        <TextView
            android:id="@+id/bankT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1233.0元" />
    </LinearLayout>

</LinearLayout>