<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:titlebar="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg"
    android:orientation="vertical" >

    <com.pangff.wjw.view.TitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titleBarHeight"
        titlebar:canBack="true"
        titlebar:title="@string/changePwd" />

    <EditText
        android:id="@+id/originalPasswordE"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/menu_center_bg"
        android:text="原始密码" />

    <EditText
        android:id="@+id/newPasswordE"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/menu_center_bg"
        android:text="新密码" />

    <EditText
        android:id="@+id/newPasswordSureE"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/menu_center_bg"
        android:text="确认新密码" />

    <LinearLayout
        android:id="@+id/rl_operation"
        android:layout_width="fill_parent"
        android:layout_height="71dp"
        android:layout_below="@+id/detail" >

        <View
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/sureResiveB"
            android:layout_width="113dp"
            android:layout_height="38dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/blue_button_seletor"
            android:text="@string/resive_password"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/cancelResiveB"
            android:layout_width="113dp"
            android:layout_height="38dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/gray_white_button_selector"
            android:text="@string/withdrawals_canle"
            android:textColor="#454545" />

        <View
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>