<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/timeT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/time_bg"
        android:drawableLeft="@drawable/icon_time"
        android:drawablePadding="5dp"
        android:gravity="left"
        android:padding="5dp"
        android:text="2014-07-01"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/labelAmountT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/withdrawals_label_amount"
            android:textSize="@dimen/listText" />

        <TextView
            android:id="@+id/amountT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1233.0元"
            android:textSize="@dimen/listText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <TextView
            android:id="@+id/labelBankT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/withdrawals_label_bank"
            android:textSize="@dimen/listText" />

        <TextView
            android:id="@+id/bankT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1233.0元"
            android:textSize="@dimen/listText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingBottom="10dp"
        android:paddingRight="15dp" >

        <TextView
            android:id="@+id/labelFeeT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/withdrawals_label_fee"
            android:textSize="@dimen/listText" />

        <TextView
            android:id="@+id/feeT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1233.0元"
            android:textSize="@dimen/listText" />
    </LinearLayout>

</LinearLayout>